--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "plyr-react": "^3.0.8",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-countup": "^4.3.3",
     "react-dom": "17.0.2",
     "react-google-maps": "^9.4.5",
