--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@react-spring/parallax": "^9.2.3",
+    "all": "^0.0.0",
     "contentful": "^9.0.0",
     "framer-motion": "^4.1.17",
     "google-map-react": "^2.1.10",
