--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-spring/parallax": "^9.2.3",
     "all": "^0.0.0",
     "contentful": "^9.0.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "google-map-react": "^2.1.10",
     "next": "10.2.0",
